--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
 
    <script  src="assets/js/metro.min.js"></script>
 
-   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFrV182ow3IIItXKKu1gDho3e_OmEjsdI&callback=initMap"
+   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFrV182ow3IIItXKKu1gDho3e_OmEjsdI"
     async defer></script>
 </body>
 </html>
