--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,13 @@
   <link rel="stylesheet" href="assets/css/material.css" >
 
   <link rel="stylesheet" href="https://js.arcgis.com/3.23/esri/css/esri.css">
+
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
+    integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+    crossorigin=""/>
+   
+
+
 </head>
 <body bgcolor="#222222">
   <app-root></app-root>
@@ -32,6 +39,23 @@
 
    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFrV182ow3IIItXKKu1gDho3e_OmEjsdI"
     async defer></script>
+
+    <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
+    integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
+    crossorigin="" async defer></script>
+
+
+    <!-- Load Esri Leaflet from CDN -->
+    <script src="https://unpkg.com/esri-leaflet@2.1.3/dist/esri-leaflet.js"
+    integrity="sha512-pijLQd2FbV/7+Jwa86Mk3ACxnasfIMzJRrIlVQsuPKPCfUBCDMDUoLiBQRg7dAQY6D1rkmCcR8286hVTn/wlIg=="
+    crossorigin="" async defer></script>
+
+    <!-- ImageOverlay -->
+    <script src="https://gis.lrgvdc911.org/geo/Leaflet.ImageOverlay.Rotated.js" async defer></script>
+	  <script	src="https://gis.lrgvdc911.org/geo/leaflet-tilelayer-wmts.js" async defer></script>
+
+
+
 </body>
 </html>
 
