--- a/src/index.html
+++ b/src/index.html
@@ -51,8 +51,8 @@
     crossorigin="" async defer></script>
 
     <!-- ImageOverlay -->
-    <script src="https://gis.lrgvdc911.org/geo/Leaflet.ImageOverlay.Rotated.js" async defer></script>
-	  <script	src="https://gis.lrgvdc911.org/geo/leaflet-tilelayer-wmts.js" async defer></script>
+    <script src="https://gis.lrgvdc911.org/lib/js/Leaflet.ImageOverlay.Rotated.js" async defer></script>
+	  <script	src="https://gis.lrgvdc911.org/lib/js/leaflet-tilelayer-wmts.js" async defer></script>
 
 
 
