--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
   
   <link rel="stylesheet" href="https://js.arcgis.com/3.24/dijit/themes/claro/claro.css">
   <link rel="stylesheet" href="https://js.arcgis.com/3.23/esri/css/esri.css">
-  <!-- <link rel="stylesheet" href="https://js.arcgis.com/3.24/esri/themes/calcite/esri/esri.css"> -->
+  
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
     integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
     crossorigin=""/>
@@ -31,7 +31,8 @@
 <body bgcolor="#222222" >
   <app-root></app-root>
 
-   <script  src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+   <script  src="https://code.jquery.com/jquery-2.2.4.min.js" 
+   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
   
    <script  src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 
@@ -44,12 +45,12 @@
     integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
     crossorigin=""  ></script>
 
-
+    
+    <script	src="https://gis.lrgvdc911.org/lib/js/leaflet-tilelayer-wmts.js" ></script>
+ 
     <!-- ImageOverlay -->
-    <script src="https://gis.lrgvdc911.org/lib/js/Leaflet.ImageOverlay.Rotated.js" async defer></script>
-	  <script	src="https://gis.lrgvdc911.org/lib/js/leaflet-tilelayer-wmts.js" async defer></script>
-
-
+    <script src="https://gis.lrgvdc911.org/lib/js/Leaflet.ImageOverlay.Rotated.js" ></script>
+	 
 
 </body>
 </html>
