updates to subdivision

--- a/src/index.html
+++ b/src/index.html
@@ -59,8 +59,12 @@
  
     <!-- Leaflet Plugins -->
     <!-- 1.) ImageOverlay Plugin -->
+    <!-- 2.) Control Loading Plugin -->
     <script src="https://gis.lrgvdc911.org/lib/js/Leaflet.ImageOverlay.Rotated.js" ></script>
-	 <script src="assets/js/Control.Loading.js"></script>
+    <script src="assets/js/Control.Loading.js"></script>
+   
+  
+   <script src="https://unpkg.com/pdfjs-dist@2.0.489/build/pdf.min.js"></script>
 
 </body>
 </html>
