subdivision component more updates and more dependencies

--- a/src/index.html
+++ b/src/index.html
@@ -26,8 +26,12 @@
     crossorigin=""/>
 
   <link rel="stylesheet" href="assets/css/Control.Loading.css">
-   
+  
+  <link rel="stylesheet" href="assets/css/Control.Opacity.css">
 
+  <link rel="stylesheet" href="assets/css/bootstrap.slider.css">
+  <link rel="stylesheet" href="assets/css/Control.Dist.css">
+  <link rel="stylesheet" href="assets/css/toolbar.css">
 
 </head>
 <body bgcolor="#222222" >
@@ -56,14 +60,20 @@
 
     
     <script	src="https://gis.lrgvdc911.org/lib/js/leaflet-tilelayer-wmts.js" ></script>
- 
+     <script src="assets/js/Leaflet.toolbar.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.0.2/bootstrap-slider.js"></script>
+
     <!-- Leaflet Plugins -->
     <!-- 1.) ImageOverlay Plugin -->
     <!-- 2.) Control Loading Plugin -->
+    <!-- 3.) Opacity Control Plugin -->
+    <!-- 4.) Distortable Control Plugin -->
     <script src="https://gis.lrgvdc911.org/lib/js/Leaflet.ImageOverlay.Rotated.js" ></script>
     <script src="assets/js/Control.Loading.js"></script>
-   
+    <script src="assets/js/Control.Opacity.js"></script>
   
+    <script src="assets/js/Leaflet.Distortable.js"></script>
+
    <script src="https://unpkg.com/pdfjs-dist@2.0.489/build/pdf.min.js"></script>
 
 </body>
