new updates tiff and pdf are almost done.

--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,8 @@
     <script src="assets/js/Leaflet.Distortable.js"></script>
 
    <script src="https://unpkg.com/pdfjs-dist@2.0.489/build/pdf.min.js"></script>
-
+    
+   <script src="assets/js/tiff.min.js"></script>
 </body>
 </html>
 
