added multiple features for editing the images for subdivisions.

--- a/src/index.html
+++ b/src/index.html
@@ -77,6 +77,8 @@
    <script src="https://unpkg.com/pdfjs-dist@2.0.489/build/pdf.min.js"></script>
     
    <script src="assets/js/tiff.min.js"></script>
+
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/1.7.22/fabric.min.js"></script>
 </body>
 </html>
 
