--- a/src/index.html
+++ b/src/index.html
@@ -79,6 +79,8 @@
    <script src="assets/js/tiff.min.js"></script>
 
    <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/1.7.22/fabric.min.js"></script>
+
+   <script src="./assets/js/dragscroll.js"></script>
 </body>
 </html>
 
