--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,14 @@
   <link rel="stylesheet" href="assets/css/bootstrap.slider.css">
   <link rel="stylesheet" href="assets/css/Control.Dist.css">
   <link rel="stylesheet" href="assets/css/toolbar.css">
-
+ <style>
+   .canvas-container {
+     left:50%;
+     top:2%;
+     margin-left: -250px;
+    background-color: white;
+}
+ </style>
 </head>
 <body class="claro" bgcolor="#222222" >
   <app-root></app-root>
