added new map functionality..

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="assets/css/material.css" >
+   <link rel="stylesheet" href="assets/css/material.css" >
   
   <link rel="stylesheet" href="https://js.arcgis.com/3.28/dijit/themes/claro/claro.css">
   <link rel="stylesheet" href="https://js.arcgis.com/3.28/esri/css/esri.css">
@@ -39,6 +39,9 @@
      margin-left: -250px;
     background-color: white;
 }
+.dijitMenuPopup {
+      z-index: 9000 !important;
+  }
  </style>
 </head>
 <body class="claro" bgcolor="#222222" >
