--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,10 @@
 .dijitMenuPopup {
       z-index: 9000 !important;
   }
+  input[type="text"] {
+    text-transform: uppercase;
+  }
+
  </style>
 </head>
 <body class="claro" bgcolor="#222222" >
